# Rank2

./: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  build.sh  deploy.sh  entities_template.csv  pyproject.toml  rank2.spec  run_analysis.py  server.py
.github/workflows/: deploy.yml
dashboard/: api.py  config.py
dashboard/pages/: base.py
dashboard/tests/: conftest.py  test_example.py
perception/: analyzer.py  auth.py  config.py  db.py  email_utils.py  loader.py  models.py  pdf.py  prompts.py  scoring.py  sentiment.py
perception/data/: __init__.py  cms.py  evidence.py  nppes.py  places.py  reputation.py
perception/sources/: cms.py  google.py  healthgrades.py  yelp.py  zocdoc.py
web/: index.html
