[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rank2"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "playwright>=1.44",
    "httpx>=0.27",
    "pandas>=2.2",
    "duckdb>=0.10",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "nltk>=3.8",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "python-dateutil>=2.9",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-playwright>=0.5",
]

[tool.hatch.build.targets.wheel]
packages = ["perception", "dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["dashboard/tests"]
